syntax = "proto3";

package pocket.supplier;

option go_package = "pocket/x/supplier/types";

// Msg defines the Msg service.
service Msg {
  rpc StakeSupplier (MsgStakeSupplier) returns (MsgStakeSupplierResponse);
}
message MsgStakeSupplier {
  string address = 1;
}

message MsgStakeSupplierResponse {}

